<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layanan.tambah_Layanan">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvpelanggan"
        android:text="@string/layanan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvnama"
        android:text="@string/namalayanan"
        app:layout_constraintTop_toBottomOf="@+id/tvpelanggan"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:id="@+id/inputnama"
        android:hint="@string/namalayanan"
        app:layout_constraintTop_toBottomOf="@+id/tvnama"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_background"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvalamat"
        android:text="@string/hargaLayanan"
        app:layout_constraintTop_toBottomOf="@+id/inputnama"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:id="@+id/inputharga"
        android:hint="@string/hargaLayanan"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@+id/tvalamat"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvcabang"
        android:text="@string/cabang"
        app:layout_constraintTop_toBottomOf="@+id/inputharga"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:id="@+id/inputcabang"
        android:hint="@string/cabang"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@+id/tvcabang"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/simpan"
        app:layout_constraintTop_toBottomOf="@+id/inputcabang"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/simpan"
        android:textSize="20sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>