<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbg"
    tools:context=".tambahan.Tambahan">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvlayanan"
        android:text="@string/Tambahan"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvnama"
        android:text="@string/namabarang"
        app:layout_constraintTop_toBottomOf="@+id/tvlayanan"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/inputnamalayanan"
        android:hint="@string/namabarang"
        android:inputType="textCapWords"
        android:drawableLeft="@drawable/baseline_local_grocery_store_24"
        android:drawablePadding="8dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tvnama"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text_background"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvalamat"
        android:text="@string/hargabarang"
        app:layout_constraintTop_toBottomOf="@+id/inputnamalayanan"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/inputharga"
        android:hint="@string/hargabarang"
        android:drawableLeft="@drawable/baseline_attach_money_24"
        android:drawablePadding="8dp"
        android:inputType="numberDecimal"
        android:textColor="@color/black"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@+id/tvalamat"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:maxLength="10"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvcabang"
        android:text="@string/cabang"
        app:layout_constraintTop_toBottomOf="@+id/inputharga"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/inputcabang"
        android:hint="@string/cabang"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/baseline_account_tree_24"
        android:drawablePadding="8dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@+id/tvcabang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/simpan"
        app:layout_constraintTop_toBottomOf="@+id/inputcabang"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:text="@string/simpan"
        android:backgroundTint="#000000"
        android:textSize="20sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>